fixed focus on bootstrap collapse

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -50,3 +50,7 @@
 #charLimit{
   color: black;
 }
+.err{
+  color: red;
+  padding-left: 1rem;
+}
